# mdspan_cpm_example

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
.devcontainer/: devcontainer.json
